--- a/download_and_classify_reads.ipynb
+++ b/download_and_classify_reads.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0ab2fc2-501e-4ed0-9568-14354af8a610",
+   "id": "abcfa58c-b976-4f91-9e69-84db2c35b5af",
    "metadata": {
     "scrolled": true,
     "vscode": {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32ec27e7-b657-4304-9a5d-f18ea2087269",
+   "id": "cbeb3756-032d-4b71-be46-69fdc36472ff",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -64,18 +64,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92adfe33",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "9c121e04-e63a-4d4e-945f-bb08f1dfe930",
+   "metadata": {},
    "source": [
-    "````{admonition} Warning\n",
-    ":class: warning\n",
-    "\n",
-    "Make sure you have at least 50GB of space\n",
-    "````\n"
+    "> [!WARNING]  \n",
+    "> Make sure you have at least 50GB of space"
    ]
   },
   {
@@ -101,7 +94,7 @@
    "source": [
     "### Download kraken2 index\n",
     "\n",
-    "We can get kraken2 index from https://benlangmead.github.io/aws-indexes/k2 using the [aws-cli](https://aws.amazon.com/cli/)"
+    "We can get a kraken2 index from https://benlangmead.github.io/aws-indexes/k2 using the [aws-cli](https://aws.amazon.com/cli/)"
    ]
   },
   {
@@ -113,17 +106,14 @@
     }
    },
    "source": [
-    "````{admonition} Note\n",
-    ":class: note\n",
-    "\n",
-    "Follow aws-cli install instructions [here](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html)\n",
-    "````"
+    "> [!NOTE]  \n",
+    "> Follow aws-cli install instructions [here](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "015f0f7e",
+   "id": "df74cf9b-96bb-4f3a-ab74-84248e7273c8",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -145,11 +135,8 @@
     }
    },
    "source": [
-    "````{admonition} Warning\n",
-    ":class: warning\n",
-    "\n",
-    "You need at least 70GB of ram to use this database\n",
-    "````"
+    "> [!WARNING]  \n",
+    "> You need at least 70GB of ram to use this database"
    ]
   },
   {
@@ -168,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4abae43",
+   "id": "d9d1de3b-2f9b-46f5-a27e-882dc6bcef62",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -181,6 +168,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53a9251e-7c47-41d7-a353-f052f8b5e995",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> Optional information to help a user be more successful."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "433c79e4",
    "metadata": {
     "vscode": {
@@ -188,31 +184,22 @@
     }
    },
    "source": [
-    "````{admonition} Tip\n",
-    ":class: tip\n",
-    "\n",
-    "The taxonomic profiles are under results/abundances\n",
-    "````"
+    "> **TIP**\n",
+    "> The taxonomic profiles are under results/abundances"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "codemirror_mode": "shell",
+   "file_extension": ".sh",
+   "mimetype": "text/x-sh",
+   "name": "bash"
   }
  },
  "nbformat": 4,
