--- a/download_and_classify_reads.ipynb
+++ b/download_and_classify_reads.ipynb
@@ -25,16 +25,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abcfa58c-b976-4f91-9e69-84db2c35b5af",
+   "cell_type": "raw",
+   "id": "d6dea272-cae1-4755-b18b-988e6a00cd3b",
    "metadata": {
     "scrolled": true,
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
    "source": [
     "git clone https://github.com/IGS/portal_client\n",
     "pip install -e portal_client"
@@ -49,15 +47,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbeb3756-032d-4b71-be46-69fdc36472ff",
+   "cell_type": "raw",
+   "id": "a9bc6e2d-5fca-4e52-90ea-abbaa0b0cb86",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
    "source": [
     "portal_client --manifest data/manifest.tsv --destination reads "
    ]
@@ -111,15 +107,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df74cf9b-96bb-4f3a-ab74-84248e7273c8",
+   "cell_type": "raw",
+   "id": "b8a23bc2-1a7c-4fe9-b70e-4808e74c0f2c",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
    "source": [
     "aws s3 cp --no-sign-request s3://genome-idx/kraken/k2_standard_20240605.tar.gz .\n",
     "mkdir k2db\n",
@@ -153,15 +147,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9d1de3b-2f9b-46f5-a27e-882dc6bcef62",
+   "cell_type": "raw",
+   "id": "2fb11f84-2c2b-447e-a17e-30b07e15cd66",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
    "source": [
     "nextflow run classify.nf -c nextflow.config -params-file params.yaml"
    ]
@@ -175,7 +167,7 @@
     }
    },
    "source": [
-    "> [!TIP]\n",
+    "> [!IMPORTANT]\n",
     "> The taxonomic profiles are under results/abundances"
    ]
   }
