updated cells as shell script

--- a/download_and_classify_reads.ipynb
+++ b/download_and_classify_reads.ipynb
@@ -5,7 +5,7 @@
    "id": "362362ca-1dda-475d-8282-8d1f32793de7",
    "metadata": {},
    "source": [
-    "# Get HMP taxonomic profile (Kraken2 + Bracken)"
+    "# Get HMP taxonomic profile (Kraken2 + Bracken)\n"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "f4bf906a",
    "metadata": {},
    "source": [
-    "## Download reads"
+    "## Download reads\n"
    ]
   },
   {
@@ -21,11 +21,12 @@
    "id": "f6cb0055-0189-4334-9e00-991ca6978036",
    "metadata": {},
    "source": [
-    "### Install IGS-portal-client"
+    "### Install IGS-portal-client\n"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d6dea272-cae1-4755-b18b-988e6a00cd3b",
    "metadata": {
     "scrolled": true,
@@ -33,6 +34,7 @@
      "languageId": "shellscript"
     }
    },
+   "outputs": [],
    "source": [
     "git clone https://github.com/IGS/portal_client\n",
     "pip install -e portal_client"
@@ -43,17 +45,19 @@
    "id": "d6355d90-5a7a-4994-b045-f823fe4586e1",
    "metadata": {},
    "source": [
-    "### Download from manifest "
+    "### Download from manifest\n"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a9bc6e2d-5fca-4e52-90ea-abbaa0b0cb86",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
+   "outputs": [],
    "source": [
     "portal_client --manifest data/manifest.tsv --destination reads "
    ]
@@ -64,7 +68,7 @@
    "metadata": {},
    "source": [
     "> [!WARNING]  \n",
-    "> Make sure you have at least 50GB of space"
+    "> Make sure you have at least 50GB of space\n"
    ]
   },
   {
@@ -76,7 +80,7 @@
     }
    },
    "source": [
-    "## Classify reads"
+    "## Classify reads\n"
    ]
   },
   {
@@ -90,7 +94,7 @@
    "source": [
     "### Download kraken2 index\n",
     "\n",
-    "We can get a kraken2 index from https://benlangmead.github.io/aws-indexes/k2 using the [aws-cli](https://aws.amazon.com/cli/)"
+    "We can get a kraken2 index from https://benlangmead.github.io/aws-indexes/k2 using the [aws-cli](https://aws.amazon.com/cli/)\n"
    ]
   },
   {
@@ -103,17 +107,19 @@
    },
    "source": [
     "> [!NOTE]  \n",
-    "> Follow aws-cli install instructions [here](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html)"
+    "> Follow aws-cli install instructions [here](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html)\n"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b8a23bc2-1a7c-4fe9-b70e-4808e74c0f2c",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
+   "outputs": [],
    "source": [
     "aws s3 cp --no-sign-request s3://genome-idx/kraken/k2_standard_20240605.tar.gz .\n",
     "mkdir k2db\n",
@@ -130,7 +136,7 @@
    },
    "source": [
     "> [!WARNING]  \n",
-    "> You need at least 70GB of ram to use this database"
+    "> You need at least 70GB of ram to use this database\n"
    ]
   },
   {
@@ -143,17 +149,20 @@
    },
    "source": [
     "### Run the classify.nf script\n",
-    "You need to install [nextflow](https://www.nextflow.io/docs/latest/install.html) and [apptainer](https://apptainer.org/docs/admin/main/installation.html#install-ubuntu-packages) to run classify.nf "
+    "\n",
+    "You need to install [nextflow](https://www.nextflow.io/docs/latest/install.html) and [apptainer](https://apptainer.org/docs/admin/main/installation.html#install-ubuntu-packages) to run classify.nf\n"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2fb11f84-2c2b-447e-a17e-30b07e15cd66",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
+   "outputs": [],
    "source": [
     "nextflow run classify.nf -c nextflow.config -params-file params.yaml"
    ]
@@ -167,8 +176,8 @@
     }
    },
    "source": [
-    "> [!IMPORTANT]\n",
-    "> The taxonomic profiles are under results/abundances"
+    "> [!IMPORTANT]  \n",
+    "> The taxonomic profiles are under results/abundances\n"
    ]
   }
  ],
