--- a/download_and_classify_reads.ipynb
+++ b/download_and_classify_reads.ipynb
@@ -5,7 +5,7 @@
    "id": "362362ca-1dda-475d-8282-8d1f32793de7",
    "metadata": {},
    "source": [
-    "# Get HMP taxonomic profile (Kraken2 + Bracken)\n"
+    "# Get HMP samples taxonomic profiles (Kraken2 + Bracken)\n"
    ]
   },
   {
