fixed kraken2 db path

--- a/download_and_classify_reads.ipynb
+++ b/download_and_classify_reads.ipynb
@@ -259,7 +259,8 @@
     }
    ],
    "source": [
-    "nextflow run classify.nf -c nextflow.config -params-file real_reads.yaml -resume"
+    "db_path=$(realpath ./k2db)\n",
+    "nextflow run classify.nf -c nextflow.config -params-file real_reads.yaml --db $db_path -resume"
    ]
   },
   {
