--- a/1_download_and_classify.ipynb
+++ b/1_download_and_classify.ipynb
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "portal_client --manifest data/manifest.tsv --destination reads "
+    "portal_client --manifest data/manifest.tsv --destination hmp_reads "
    ]
   },
   {
@@ -260,7 +260,13 @@
    ],
    "source": [
     "db_path=$(realpath ./k2db)\n",
-    "nextflow run classify.nf -c nextflow.config -params-file real_reads.yaml --db $db_path -resume"
+    "nextflow run classify.nf -c nextflow.config \\\\\n",
+    "        --input hmp_reads \\\\\n",
+    "        --output reads/real \\\\\n",
+    "        --archive true \\\\\n",
+    "        --fastp true \\\\\n",
+    "        --threshold 200 \\\\ \n",
+    "        --db $db_path "
    ]
   },
   {
