--- a/2_simulate_reads.ipynb
+++ b/2_simulate_reads.ipynb
@@ -19,7 +19,7 @@
     }
    },
    "source": [
-    "## Clone repos"
+    "## Clone repo"
    ]
   },
   {
@@ -32,8 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "git clone https://github.com/metagenlab/benchmark-MeSS-CAMISIM\n",
-    "git clone https://github.com/CAMI-challenge/CAMISIM"
+    "git clone https://github.com/metagenlab/benchmark-MeSS-CAMISIM"
    ]
   },
   {
