--- a/2_simulate_reads.ipynb
+++ b/2_simulate_reads.ipynb
@@ -172,7 +172,7 @@
    },
    "outputs": [],
    "source": [
-    "./get_tables.py reads/simulated/classified/abundances"
+    "./get_tables.py reads/simulated/classified/abundances data/abundances"
    ]
   },
   {
