--- a/1_download_and_classify.ipynb
+++ b/1_download_and_classify.ipynb
@@ -114,8 +114,9 @@
    "id": "9c121e04-e63a-4d4e-945f-bb08f1dfe930",
    "metadata": {},
    "source": [
-    "> [!WARNING]  \n",
-    "> Make sure you have at least 50GB of space\n"
+    "```{warning}\n",
+    "Make sure you have at least 50GB of space\n",
+    "```"
    ]
   },
   {
@@ -193,8 +194,9 @@
     }
    },
    "source": [
-    "> [!WARNING]  \n",
-    "> You need at least 70GB of ram to use this database\n"
+    "```{warning}\n",
+    "You need at least 70GB of ram to use this database\n",
+    "```"
    ]
   },
   {
