adde -F in lineage, fixed bash commands

--- a/2_simulate_reads.ipynb
+++ b/2_simulate_reads.ipynb
@@ -86,11 +86,11 @@
    "outputs": [],
    "source": [
     "container_prefix=$(realpath ./containers)\n",
-    "nextflow run benchmark-MeSS-CAMISIM/main.nf \\\\\n",
-    "        -params-file benchmark-MeSS-CAMISIM/run-params.yml \\\\\n",
-    "        -c benchmark-MeSS-CAMISIM/nextflow.config \\\\\n",
-    "        --input data/samples \\\\\n",
-    "        --outdir reads/simulated \\\\\n",
+    "nextflow run benchmark-MeSS-CAMISIM/main.nf \\\n",
+    "        -params-file benchmark-MeSS-CAMISIM/run-params.yml \\\n",
+    "        -c benchmark-MeSS-CAMISIM/nextflow.config \\\n",
+    "        --input data/samples \\\n",
+    "        --outdir reads/simulated \\\n",
     "        --container_prefix $container_prefix  "
    ]
   },
@@ -138,12 +138,12 @@
    "outputs": [],
    "source": [
     "db_path=$(realpath ./k2db)\n",
-    "nextflow run classify.nf -c nextflow.config \\\\\n",
-    "        --input sim_fastq \\\\\n",
-    "        --output reads/simulated/classified \\\\\n",
-    "        --archive false \\\\\n",
-    "        --fastp true \\\\\n",
-    "        --threshold 200 \\\\ \n",
+    "nextflow run classify.nf -c nextflow.config \\\n",
+    "        --input sim_fastq \\\n",
+    "        --output reads/simulated/classified \\\n",
+    "        --archive false \\\n",
+    "        --fastp true \\\n",
+    "        --threshold 200 \\\n",
     "        --db $db_path "
    ]
   },
@@ -151,8 +151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> [!TIP]  \n",
-    "> abundances from data/abundances are in reads/simulated/classified/abundances"
+    "```{tip}\n",
+    "abundances from data/abundances are in reads/simulated/classified/abundances\n",
+    "```"
    ]
   },
   {
@@ -196,9 +197,24 @@
    },
    "outputs": [],
    "source": [
-    "taxonkit lineage data/uniq_taxids.tsv | \\\\\n",
-    "taxonkit reformat | csvtk -H -t cut -f 1,3 | \\\\\n",
-    "csvtk -H -t sep -f 2 -s ';' -R | \\\\\n",
+    "taxonkit lineage data/uniq_taxids.tsv | \\\n",
+    "taxonkit reformat -F | csvtk -H -t cut -f 1,3 | \\\n",
+    "csvtk -H -t sep -f 2 -s ';' -R | \\\n",
+    "csvtk add-header -t -n taxid,kindom,phylum,class,order,family,genus,species > data/lineage.tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "taxonkit reformat -F | csvtk -H -t cut -f 1,3 | \\\n",
+    "csvtk -H -t sep -f 2 -s ';' -R | \\\n",
     "csvtk add-header -t -n taxid,kindom,phylum,class,order,family,genus,species > data/lineage.tsv"
    ]
   },
@@ -220,10 +236,10 @@
    "outputs": [],
    "source": [
     "container_prefix=$(realpath ./containers)\n",
-    "nextflow run benchmark-MeSS-CAMISIM/main.nf \\\\\n",
-    "        -params-file benchmark-MeSS-CAMISIM/subsets-params.yml \\\\\n",
-    "        -c benchmark-MeSS-CAMISIM/nextflow.config \\\\\n",
-    "        --outdir benchmark \\\\\n",
+    "nextflow run benchmark-MeSS-CAMISIM/main.nf \\\n",
+    "        -params-file benchmark-MeSS-CAMISIM/subsets-params.yml \\\n",
+    "        -c benchmark-MeSS-CAMISIM/nextflow.config \\\n",
+    "        --outdir benchmark \\\n",
     "        --container_prefix $container_prefix  "
    ]
   },
@@ -231,8 +247,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> [!TIP]  \n",
-    "> Resources usage in benchmark/pipeline_info/execution_trace_*.txt"
+    "```{tip}\n",
+    "Resources usage in benchmark/pipeline_info/execution_trace_*.txt\n",
+    "```"
    ]
   }
  ],
